--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,4 @@
-
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://{DB_USER}:{DB_PASS}@cluster0.kkdxc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
