Implementação do serviço de cadastro de associados, pautas e tratamento de exceções

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,6 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://george:123@cluster0.kkdxc.mongodb.net/softbox?retryWrites=true&w=majority
+server:
+  error:
+    include-stacktrace: on_param
